[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irp-attest-pro"
version = "0.1.0"
description = "Advanced attestation for IRP: certificate-chain and trust-root validation for RFC 3161 timestamps. Source-available under BSL 1.1."
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Johan Lopes Helgesson", email = "info@intentrecord.xyz" }]
dependencies = [
    "irp-capture[integrity]>=0.7.0",
    "cryptography>=42",
    "asn1crypto>=1.5",
]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://intentrecord.xyz"
Source = "https://github.com/S0tman/irp-attest-pro"

[tool.setuptools.packages.find]
include = ["irp_attest_pro*"]
